<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sandbox</string>

    <!-- Application Wide -->
    <string name="prefs">prefs</string>

    <!-- Connection Menu -->
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="controllerMode">Controller Mode</string>
    <string name="simple">Simple Controller</string>
    <string name="complex">Complex Controller</string>

    <string-array name="controllerType">
        <item>Simple Controller</item>
        <item>Complex Controller</item>
    </string-array>

    <!-- DeviceListActivity -->
    <string name="title_new_devices">New Devices</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="button_scan">Scan</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="select_device">Select Device</string>
    <string name="none_found">Nothing Found</string>
    <string name="none_paired">Nothing Paired</string>
    <string name="scanning">Scanning</string>

    <!-- MainTabWidget -->
    <string name="connected">Connected</string>
    <string name="not_connected">Not Connected</string>
    <string name="are_not_connected">You Are Not Currently Connected</string>
    <string name="success_disconnect">You Successfully Disconnected</string>

    <!-- RobotInfoActivity -->
    <string-array name="information_array">
        <item>BATTERY</item>
        <item>ROBOT_NAME</item>
        <item>ALL_SENSORS</item>
        <item>IR_ALL</item>
        <item>LIGHT_ALL</item>
        <item>OBSTACLE_ALL</item>
    </string-array>

    <!-- Robot Info Activity/Layout -->
    <string name="table_layout_battery">Battery</string>
    <string name="table_layout_ir_left">IR Left</string>
    <string name="table_layout_ir_right">IR Right</string>
    <string name="table_layout_light_left">Light Left</string>
    <string name="table_layout_light_center">Light Center</string>
    <string name="table_layout_light_right">Light Right</string>

    <!-- PictureActivity -->
    <string name="successful_save">The picture was successfully saved!</string>
    <string name="unsuccessful_save">There was an error in saving the picture.</string>
    <string name="take_picture">Take a Picture!</string>

    <!-- PictureGalleryActivity -->
    <string name="successful_deleting">Successfully Deleted Picture From Internal Memory!</string>
    <string name="error_deleting">Error Deleting Picture!</string>
    <string name="no_pictures">You currently have not taken any pictures!</string>
    <string name="error_external_save">There was an error saving the image to external storage.</string>
    <string name="success_external_save">Image was successfully saved to external storage.</string>
    <string name="delete_picture">Delete Picture</string>
    <string name="save_picture_external">Save Picture to External Storage</string>
    <string name="confirm_delete">Are you sure you want to delete %1$s?</string>

    <!-- PreferencesActivity -->
    <string name="pref_controller_title">Robot Controller Mode</string>
    <string name="pref_controller_sum">Choose between a simple and complex robot
		controller.</string>
    <string name="refresh_rate_title">Refresh Rate</string>
    <string name="refresh_rate_title2">Refresh Rate (ms)</string>
    <string name="refresh_rate_sum">Enter the number of milliseconds to wait before
		getting robot information.</string>
    <string name="autoRefresh_title">Automatically Refresh</string>
    <string name="autoRefresh_summary">Enable this to have the info screen refresh automatically. NOTE, this is quite a bit more buggy than a manual approach!</string>

    <!-- SharedPreferences -->
    <string name="refresh_rate_pref">refreshRatePref</string>
    <string name="default_refresh_rate">1000</string>
    <string name="autoRefresh_pref">autoRefreshPref</string>
    <string name="controller_mode_pref">controllerModePref</string>
    <string name="current_controller">Complex Controller</string>

    <!-- 2d Graphics -->
    <string name="circle">Circle</string>
    <string name="line">Line</string>
    <string name="oval">Oval</string>
    <string name="point">Point</string>
    <string name="polygon">Polygon</string>
    <string name="rectangle">Rectangle</string>
    <string name="text">Text</string>
    <string name="x_coordinate">Please enter the x coordinate: </string>
    <string name="y_coordinate">Please enter the y coordinate: </string>
    <string name="radius">Please enter the radius: </string>
    <string name="paint_color">Please enter the RGB values separated by commas: </string>
    <string name="length">Please enter the length: </string>
    <string name="width">Please enter the width:</string>
    <string name="numsides">Please enter the number of sides</string>
    <string name="textprompt">Please enter text: </string>
    <string name="height">Please enter the height of the oval:</string>
    <string name="x_start">Please enter the x coordinate of the start:</string>
    <string name="y_start">Please enter the y coordinate of the start: </string>
    <string name="x_end">Please enter the x coordinate of the end: </string>
    <string name="y_end">Please enter the y coordinate of the end:</string>
    <string name="camera">Camera</string>
    <string name="camera_roll">Photo from gallery</string>
    <string name="android_camera">Android device camera</string>
    <string name="scribbler_cam">Scribbler camera</string>
    <string name="beep">Play a tone</string>
    <string name="frequency">Enter the frequency: </string>
    <string name="duration">Enter the duration of the beep: </string>
    <string name="play">Play</string>
    <string name="ok">OK</string>
    <string name="octave">Please choose an octave between 1 and 8: </string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="enable">Enable</string>

</resources>